# agents

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
examples/: basic_usage.py
project-orchestrator/: .env.example  README.md  README_CN.md  config.py  main.py  orchestrator.py  requirements.txt  run.sh  state.py  worker.py
project-orchestrator/agents/: orchestrator.md
project-orchestrator/agents/phase0/: api_contract.md  coding_standards.md  prd_expert.md  schema_architect.md  schema_architect_cn.md  task_decomposer.md  task_decomposer_cn.md  tech_architect.md
project-orchestrator/agents/phase1n/: agent_be.md  agent_connect.md  agent_db.md  agent_fe.md  agent_fe_cn.md  agent_fix.md  agent_fix_cn.md  agent_verify.md
scripts/: i18n_agent_prompts.py
skills/: api-contract-architect.md  coding-standards.md  coding-standards_cn.md  db-schema-architect.md  mobile-architect.md  mobile-architect_cn.md  prd-expert.md  product-researcher.md  product-researcher_cn.md  project-orchestrator.md  prompt-engineer.md  task-decomposer.md  ux-designer.md  ux-designer_cn.md
src/agents/: __init__.py  _base.py  api_contract_architect.py  cli.py  coding_standards.py  db_schema_architect.py  mobile_architect.py  prd_expert.py  product_researcher.py  project_orchestrator.py  prompt_engineer.py  task_decomposer.py  ux_designer.py
